mesa (7.1~rc1-1) UNRELEASED; urgency=low

  [ Julien Cristau ]
  * New upstream release candidate.
  * Build against libdrm >= 2.3.1.

  [ Timo Aaltonen ]
  * Refresh patches, and drop obsolete 00_create-libdir.patch and
    01_fix-makefile.patch.
  * Build-depend on x11proto-dri2-dev.
  * Drop mesa-swx11-source.
  * Add dri_interface.h to mesa-common-dev.
  * Add gl.pc to libgl1-mesa-dev

 -- Timo Aaltonen <tepsipakki@ubuntu.com>  Wed, 02 Jul 2008 14:06:18 +0300

mesa (7.0.3-4) unstable; urgency=low

  * Pull from mesa_7_0_branch (2ac4919d).
  * Put back our configs/ changes into the .diff.gz since choose-configs
    needs them before quilt is invoked. Put 04_cleanup-osmesa-configs.patch
    there as well for #485161.

 -- Brice Goglin <bgoglin@debian.org>  Wed, 18 Jun 2008 20:59:14 +0200

mesa (7.0.3-3) unstable; urgency=low

  * Pull from mesa_7_0_branch (718724de).
    + Fix intel_batchbuffer_space on i965, closes: #455817.
    + Fix busy error in i915_wait_irq for real now, closes: #467319.
  * Move our configs/ changes from the .diff.gz into our quilt patches,
    with 04_cleanup-osmesa-configs.patch renamed into 04_debian-configs.patch,
    closes: #485161.

 -- Brice Goglin <bgoglin@debian.org>  Tue, 17 Jun 2008 20:00:51 +0200

mesa (7.0.3-2) unstable; urgency=low

  * Pull from mesa_7_0_branch (03447de3).
  * Set right cliprects for the current draw region on Intel, closes: #467319.
  * Use BRW_TEXCOORDMODE_CLAMP instead of BRW_TEXCOORDMODE_CLAMP_BORDER
    to implement GL_CLAMP on i965, closes: #478880.
  * Fix segment fault with BASE_LEVEL set to 5 for MipMap on i915,
    closes: #451339.
  * Disable low impact fallback on r300 by default, closes: #440868.

 -- Brice Goglin <bgoglin@debian.org>  Fri, 13 Jun 2008 06:53:29 +0200

mesa (7.0.3-1) unstable; urgency=low

  * New upstream release.
  * Only call ProgramStringNotify if program parsing succeeded,
    closes: #473551.

 -- Brice Goglin <bgoglin@debian.org>  Fri, 11 Apr 2008 08:42:37 +0200
