@@ -11,8 +11,10 @@ mesa (7.1~rc1-1) UNRELEASED; urgency=low
   * Drop mesa-swx11-source.
   * Add dri_interface.h to mesa-common-dev.
   * Add gl.pc to libgl1-mesa-dev
+  * rules: Replace the old build system with the new autotools-based 
+    system.
 
- -- Timo Aaltonen <tepsipakki@ubuntu.com>  Wed, 02 Jul 2008 14:06:18 +0300
+ -- Timo Aaltonen <tepsipakki@ubuntu.com>  Wed, 02 Jul 2008 17:55:03 +0300
 
 mesa (7.0.3-4) unstable; urgency=low
 
